fixing small bugs with alignment

--- a/index.css
+++ b/index.css
@@ -622,7 +622,7 @@
   }
 
 
-  .grid-container * {
+  .grid-container  p:not([class]) {
       max-width: 50ch;
   }
 
@@ -718,8 +718,8 @@
         max-width: 100%;
       }
       .destination-meta {
-        --gap: 7rem;
+        --gap: min(4vw, 6rem);
         justify-content: start;
 
   }
-}
+  }
